# iOSDynamicLib-CPP20-Modules

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
modules/: Core.cppm  Core.ixx  FloatingWindow.hpp  FloatingWindow.mm  Library.cpp  Library.hpp  Math.cppm  Math.hpp  Math.ixx  Utils.cppm  Utils.hpp  Utils.ixx
